--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,12 @@ cmake_minimum_required(VERSION 3.11.0)
 project(linuxBase)
 
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_C_FLAGS_RELEASE "-ggdb")
 set(CMAKE_C_FLAGS_RELEASE "-O3 -march=core2 -mtune=native -s -fvisibility=hidden -flto -fwhole-program -DNDEBUG")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} --no-gnu-unique -fno-rtti")
 
 file(GLOB_RECURSE SOURCES "${CMAKE_SOURCE_DIR}/src/*.cpp")
+list(APPEND SOURCES "${CMAKE_SOURCE_DIR}/src/core/menu/imgui/GL/gl3w.c")
 
 include_directories(/usr/local/include)
 link_directories(/usr/local/lib)
