--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,9 @@ cmake_minimum_required(VERSION 3.11.0)
 project(linuxBase)
 
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_C_FLAGS_DEBUG "-Wall -ggdb -DDEBUG")
+set(CMAKE_C_FLAGS_DEBUG "-Wall -ggdb -fpermissive -DDEBUG")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG}")
-set(CMAKE_C_FLAGS_RELEASE "-Wall -O3 -march=core2 -mtune=native -s -fvisibility=hidden -flto -fwhole-program")
+set(CMAKE_C_FLAGS_RELEASE "-Wall -O3 -march=core2 -mtune=native -fpermissive -s -fvisibility=hidden -flto -fwhole-program")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} --no-gnu-unique -fno-rtti")
 
 file(GLOB_RECURSE SOURCES "${CMAKE_SOURCE_DIR}/src/*.cpp")
