--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,10 +24,4 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          apt-get install libsdl2-dev
-          ./build.sh
+        run: ./build.sh
