--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,12 +20,10 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
       - name: Create build directory
-        run: |
-        mkdir build
-        cd build
+        run: mkdir build; cd build
 
       - name: Cmake
         run: cmake -D CMAKE_BUILD_TYPE=Release
