--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Create build directory
         run: mkdir build; cd build
 
+      - name: Install SDL2
+        run: apt update; apt install libsdl2-dev
+
       - name: Cmake
         run: cmake -D CMAKE_BUILD_TYPE=Release
 
