--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Create build directory
         run: mkdir build; cd build
 
-      - name: Install GCC10
-        run: sudo add-apt-repository ppa:ubuntu-toolchain-r/test; sudo apt update; sudo apt install gcc-10
+      - name: Install G++10
+        run: sudo add-apt-repository ppa:ubuntu-toolchain-r/test; sudo apt update; sudo apt install g++-10
 
       - name: Install SDL2
         run: sudo apt update; sudo apt install libsdl2-dev
