--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: gcc-ubuntu-latest
+name: build
 
 on:
   push:
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    
     - name: Install packages required
       run: sudo apt install -y libsdl2-dev cmake gcc-10 g++-10
 
@@ -18,7 +19,7 @@ jobs:
       run: ./toolbox.sh -b
       
     - name: Upload artifacts
-    - uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v2
       with:
         name: build
         path: .
@@ -26,6 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    
     - name: Install packages required
       run: sudo apt install -y libsdl2-dev cmake clang
       
