--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,10 @@ name: build
 on:
   push:
     branches: [ master ]
+    paths-ignore:
+      - 'res/**'
+      - '*!toolbox.sh'
+      - '*!CMakeLists.txt'
   pull_request:
     branches: [ master ]
 
