--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,10 @@ on:
       - '*!CMakeLists.txt'
   pull_request:
     branches: [ master ]
+    paths-ignore:
+      - 'res/**'
+      - '*!toolbox.sh'
+      - '*!CMakeLists.txt'
 
 jobs:
   gcc-ubuntu:
@@ -17,7 +21,7 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Install packages required
-      run: sudo apt install -y libsdl2-dev cmake gcc-10 g++-10
+      run: sudo apt update && sudo apt install -y libsdl2-dev cmake gcc-10 g++-10
 
     - name: Build
       run: ./toolbox.sh -b
@@ -33,7 +37,7 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Install packages required
-      run: sudo apt install -y libsdl2-dev cmake clang
+      run: sudo apt update && sudo apt install -y libsdl2-dev cmake clang
       
     - name: Set to build with clang
       run: sed -i 's/false/true/g' toolbox.sh
